# MERLIN

./: CMakeLists.txt  copyright.txt  merlin_config.h
AcceleratorModel/: AcceleratorComponent.cpp  AcceleratorComponent.h  AcceleratorGeometry.cpp  AcceleratorGeometry.h  AcceleratorModel.cpp  AcceleratorModel.h  Aperture.h  Components.h  EMField.cpp  EMField.h  ModelElement.h  SpoilerWakePotentials.h  WakePotentials.cpp  WakePotentials.h
BasicTransport/: BasicTransportMaps.cpp  BasicTransportMaps.h  MatrixMaps.cpp  MatrixMaps.h  NormalTransform.cpp  NormalTransform.h  PSvectorTransform3D.cpp  PSvectorTransform3D.h  RMap.cpp  RMap.h  RTMap.cpp  RTMap.h  TransportMatrix.cpp  TransportMatrix.h  TransportRMaps.cpp  accel.f  solenoid.f
BeamDynamics/: BunchProcess.h  ProcessStepManager.cpp  ProcessStepManager.h  TTrackSim.h  TrackingSimulation.cpp  TrackingSimulation.h
BeamModel/: BeamData.h  Bunch.h  BunchConstructor.h  PSTypes.cpp  PSTypes.h  PSmoments.h  PSvector.cpp  ReferenceParticle.h
Channels/: Channels.cpp  Channels.h
Corrections/: LinearFBSystem.cpp  LinearFBSystem.h
EuclideanGeometry/: AxisRotations.cpp  AxisRotations.h  GeneralRotation.cpp  (+17 more)
Thesis/: CMakeLists.txt
Thesis/AV/: AV.cpp
Thesis/ClosedOrbit/: ClosedOrbit.cpp
Thesis/SymplecticHEL/: SymplecticHEL.cpp
Thesis/data/AV/: Aperture_6p5TeV.tfs  Aperture_6p5TeV_beam2.tfs  Collimator_6p5TeV.txt  Collimator_6p5TeV_flat_top.txt  Collimator_6p5TeV_flat_top_beam2.txt
Thesis/data/ClosedOrbit/: HL_v1.2.1_collDB.txt  twiss_hllhc_b1_crossing_test.tfs  twiss_hllhc_b1_nocrossing_test.tfs
Thesis/data/HL_LossMap/: HL_v1.2.1_Aperture.tfs
Thesis/data/JawImpact/: Aperture_Nominal+HEL.tfs  ColDB_Nominal.txt
Thesis/data/PlotHELDistn/: ColDB_HLv1.2.1.txt
Thesis/data/SymplecticHEL/: CollimatorFile_HL_HEL.txt  input (copy).txt  input.txt
(+491 files in other folders)
